--- a/match3/index.html
+++ b/match3/index.html
@@ -281,6 +281,9 @@
             <option value="easy">简单</option>
             <option value="normal" selected>普通</option>
             <option value="hard">困难</option>
+            <option value="master">大师</option>
+            <option value="hell">地狱</option>
+            <option value="extreme">极限</option>
           </select>
         </div>
       </div>
@@ -333,16 +336,28 @@
     function applyDifficulty() {
       const level = document.getElementById("difficulty").value;
       if (level === "easy") {
-        moves = 26;
+        moves = 28;
         target = 900;
+        paletteSize = 4;
+      } else if (level === "normal") {
+        moves = 22;
+        target = 1200;
         paletteSize = 5;
       } else if (level === "hard") {
         moves = 18;
         target = 1500;
         paletteSize = 6;
+      } else if (level === "master") {
+        moves = 16;
+        target = 1800;
+        paletteSize = 6;
+      } else if (level === "hell") {
+        moves = 14;
+        target = 2100;
+        paletteSize = 6;
       } else {
-        moves = 22;
-        target = 1200;
+        moves = 12;
+        target = 2500;
         paletteSize = 6;
       }
     }
