--- a/match3/index.html
+++ b/match3/index.html
@@ -143,9 +143,11 @@
       font-weight: 700;
       color: rgba(255, 255, 255, 0.9);
       box-shadow: inset 0 2px 6px rgba(255,255,255,0.18), 0 6px 12px rgba(0,0,0,0.25);
-      transition: transform 0.16s ease, filter 0.16s ease;
+      transition: transform 0.14s ease, filter 0.14s ease;
       user-select: none;
       -webkit-tap-highlight-color: transparent;
+      will-change: transform, filter;
+      transform: translateZ(0);
     }
 
     .tile.selected {
@@ -396,7 +398,7 @@
     }
 
     function renderBoard() {
-      boardEl.innerHTML = "";
+      const fragment = document.createDocumentFragment();
       for (let r = 0; r < rows; r++) {
         for (let c = 0; c < cols; c++) {
           const tile = document.createElement("div");
@@ -406,9 +408,10 @@
           const color = colors[board[r][c]];
           tile.style.background = color.bg;
           tile.textContent = color.label;
-          boardEl.appendChild(tile);
+          fragment.appendChild(tile);
         }
       }
+      boardEl.replaceChildren(fragment);
     }
 
     function updateStats() {
@@ -518,6 +521,10 @@
       return new Promise(resolve => setTimeout(resolve, ms));
     }
 
+    function nextFrame() {
+      return new Promise(resolve => requestAnimationFrame(() => resolve()));
+    }
+
     async function resolveBoard() {
       let chain = 0;
       while (true) {
@@ -527,10 +534,10 @@
         const cleared = applyMatches(matches);
         score += cleared * 20 * chain;
         updateStats();
-        await delay(180);
+        await delay(120);
         dropTiles();
         renderBoard();
-        await delay(120);
+        await delay(60);
       }
     }
 
@@ -540,12 +547,12 @@
       busy = true;
       swap(a, b);
       renderBoard();
-      await delay(120);
+      await nextFrame();
       const { found } = findMatches();
       if (!found) {
         swap(a, b);
         renderBoard();
-        await delay(120);
+        await nextFrame();
         busy = false;
         return;
       }
