--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -17,8 +17,8 @@
       --accent: #ffd77a;
       --danger: #ff8a8a;
       --shadow: 0 18px 36px rgba(5, 8, 16, 0.55);
-      --cell: min(10.8vw, 48px);
-      --gap: 4px;
+      --cell: min(11.8vw, 54px);
+      --gap: 5px;
       --radius: 14px;
     }
 
@@ -71,13 +71,13 @@
     h1 {
       margin: 0;
       font-family: "ZCOOL QingKe HuangYou", "Rubik", sans-serif;
-      font-size: clamp(24px, 5vw, 38px);
+      font-size: clamp(26px, 5.4vw, 40px);
       letter-spacing: 1.6px;
     }
 
     .subtitle {
       color: var(--muted);
-      font-size: clamp(12px, 2.6vw, 14px);
+      font-size: clamp(14px, 3.2vw, 16px);
     }
 
     .panel {
@@ -110,7 +110,7 @@
       border-radius: var(--radius);
       display: grid;
       place-items: center;
-      font-size: clamp(18px, 4.2vw, 22px);
+      font-size: clamp(20px, 4.8vw, 26px);
       font-weight: 700;
       color: rgba(255, 255, 255, 0.9);
       background: rgba(255,255,255,0.05);
@@ -128,7 +128,7 @@
       grid-template-rows: repeat(3, 1fr);
       gap: 2px;
       padding: 6px;
-      font-size: clamp(8px, 2.4vw, 11px);
+      font-size: clamp(10px, 2.8vw, 12px);
       color: rgba(255,255,255,0.7);
     }
 
@@ -251,8 +251,8 @@
       width: 100%;
       border: none;
       border-radius: 12px;
-      padding: 10px 12px;
-      font-size: 14px;
+      padding: 12px 14px;
+      font-size: 16px;
       font-weight: 700;
       cursor: pointer;
       background: linear-gradient(160deg, #ffd77a, #ffb95f);
@@ -283,7 +283,7 @@
       color: #e8f0ff;
       border: 1px solid rgba(255,255,255,0.12);
       box-shadow: none;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .message {
@@ -295,13 +295,13 @@
 
     .tips {
       color: var(--muted);
-      font-size: 12px;
+      font-size: 14px;
       line-height: 1.5;
       text-align: center;
     }
 
     @media (max-width: 720px) {
-      :root { --cell: min(11.5vw, 50px); }
+      :root { --cell: min(12.8vw, 58px); --gap: 6px; }
       .controls { grid-template-columns: 1fr; }
       .pad { grid-template-columns: repeat(3, 1fr); }
     }
